--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Finland -- History'
 - !lcc 'DK'
+- GITenberg
 title: 'Kertomuksia Suomen historiasta VI
 
   Kaarle X Kustaa'
